--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700,400,600' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Helen Oleynikova</title>
   </head>
@@ -23,8 +24,8 @@
             <p>[<a href="mailto:helenoleynikova at gmail dot com">helenoleynikova at gmail dot com</a> | <a href="https://github.com/helenol">github</a>]</p>
         </div>
 
+        <h1>Publications</h1>
         <div class="content">
-            <h1>Publications</h1>
             <a name="reactive"></a>
             <p>Helen Oleynikova, Dominik Honegger, and Marc Pollefeys. “<b>Reactive Avoidance Using Embedded Stereo Vision for MAV Flight</b>”. In Submission To <i>Proc. IEEE Int. Conf. on Robotics and Automation (ICRA)</i>, May 2015.</p>
             <a name="fpga"></a>
@@ -35,15 +36,17 @@
             [<a href="publications/oceans_2010_perimeter_patrol.pdf">pdf</a> | <a href="http://scholar.google.ch/scholar.bib?q=info:odxYPUDcpgkJ:scholar.google.com/&output=citation&hl=en&ct=citation&cd=0">bibtex</a> | <a href="https://www.youtube.com/watch?v=pTDT7HkfwJM">video</a>]</p>
         </div>
 
+        <h1>Selected Projects</h1>
+        <h2>ETH Zürich</h2>
         <div class="content">
-            <h1>Selected Projects</h1>
-            <h2>ETH Zürich</h2>
             <div class="project-right">
                 <img src="images/quad_small.jpg">
                 <p><b class="title">High-Speed Vision for Quadrotors</b> - [<a href="#reactive">paper 1</a> | <a href="#fpga">paper 2</a>]</p>
                 <p>I integrated a high-speed vision system on FPGA onto a quadrotor system and designed a system for doing high-speed obstacle avoidance on a computationally constrained platform. I also wrote position estimators and position controllers to allow the quad to operate indoors and outdoors without GPS or Vicon using the <a href="https://pixhawk.org/modules/px4flow">PX4 optical flow</a> sensor. I also wrote calibration and processing for the Android-based mobile platform on the FPGA vision system.</p>
             </div>
-            <h2>Google</h2>
+        </div>
+        <h2>Google</h2>
+        <div class="content">
             <div class="project-left">
                 <img src="images/sv_small.jpg">
                 <p><b class="title">Street Number Detection from Street View Imagery</b></p>
@@ -59,8 +62,10 @@
                 <p><b class="title">Classification of Landmark Imagery</b></p>
                 <p>Designed features and trained classifiers for automatically detecting several types of attractive or important landmark imagery. For example, collected data and chose features for classifying imagery that looks over water or shows a city skyline.</p>
             </div>
+        </div>
 
-            <h2>Willow Garage</h2>
+        <h2>Willow Garage</h2>
+        <div class="content">
             <div class="project-right">
                 <img src="images/turtlebot_arm_small.png">
                 <p><b class="title">TurtleBot Arm - Calibration and Applications</b> - [<a href="http://wiki.ros.org/turtlebot_arm?distro=electric">website</a>]</p>
@@ -71,8 +76,10 @@
                 <p><b class="title">Visual SLAM</b> - [<a href="http://wiki.ros.org/vslam">website</a> | <a href="https://www.youtube.com/watch?v=TR8BMZj-Udc">video</a>]</p>
                 <p>Worked on implementation of Visual SLAM (Simultaneous Localization and Mapping using on stereo image data) in ROS (Robot Operating System). Developed and refined API, wrote documentation, and implemented new features such as integration of pointcloud matches from laser-based sensors into Visual SLAM.</p>
             </div>
+        </div>
 
-            <h2>Olin College</h2>
+        <h2>Olin College</h2>
+        <div class="content">
             <div class="project-right">
                 <img src="images/scope_small.jpg">
                 <p><b class="title">Ping-Pong Playing Robot</b> - Senior Consulting Project for ADSYS - [<a href="https://www.youtube.com/watch?v=sxqWVtp4Vgo">video</a>]</p>
@@ -83,6 +90,7 @@
                 <p><b class="title">Autonomous Shore Navigation Using Marine Radar</b> - [<a href="#oceans"oceans>paper</a> | <a href="https://www.youtube.com/watch?v=pTDT7HkfwJM">video</a>]</p>
                 <p>Worked on an autonomoous marine surface vehicle, based on a 12 foot Catamaran. Developed overall software architecture, and worked on integrating position and state data from various sensors, writing motor controllers, and waypoint following, in addition fabricating and testing mechanical and electrical systems on autonomous surface vehicle. Designed a method to autonomously navigate around a shore using marine radar.</p>
             </div>
+        </div>
 
         </div>
     </div>
