--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="content">
             <div class="project-right">
                 <img src="images/quad_small.jpg">
-                <p class="title_row"><b class="title">High-Speed Vision for Quadrotors</b> - [<a href="#reactive">paper 1</a> | <a href="#fpga">paper 2</a>]</p>
+                <p class="title_row"><b class="title">High-Speed Vision for Quadrotors</b> [<a href="#reactive">paper 1</a> | <a href="#fpga">paper 2</a>]</p>
                 <p>I integrated a high-speed vision system on FPGA onto a quadrotor system and designed a system for doing high-speed obstacle avoidance on a computationally constrained platform. I also wrote position estimators and position controllers to allow the quad to operate indoors and outdoors without GPS or Vicon using the <a href="https://pixhawk.org/modules/px4flow">PX4 optical flow</a> sensor. I also wrote calibration and processing for the Android-based mobile platform on the FPGA vision system.</p>
             </div>
         </div>
@@ -68,13 +68,13 @@
         <div class="content">
             <div class="project-right">
                 <img src="images/turtlebot_arm_small.png">
-                <p class="title_row"><b class="title">TurtleBot Arm - Calibration and Applications</b> - [<a href="http://wiki.ros.org/turtlebot_arm?distro=electric">website</a>]</p>
+                <p class="title_row"><b class="title">TurtleBot Arm - Calibration and Applications</b> [<a href="http://wiki.ros.org/turtlebot_arm?distro=electric">website</a>]</p>
                 <p>Worked on a low-cost robot arm for hobbyist robotics. Built a system for robust camera-to-arm calibration, created documentation and assembly instructions for hobbyists, and created tools and demos.</p>
             </div>
             <div class="project-left">
                 <img src="images/vslam_small.jpg">
-                <p class="title_row"><b class="title">Visual SLAM</b> - [<a href="http://wiki.ros.org/vslam">website</a> | <a href="https://www.youtube.com/watch?v=TR8BMZj-Udc">video</a>]</p>
-                <p>Worked on implementation of Visual SLAM (Simultaneous Localization and Mapping using on stereo image data) in ROS (Robot Operating System). Developed and refined API, wrote documentation, and implemented new features such as integration of pointcloud matches from laser-based sensors into Visual SLAM.</p>
+                <p class="title_row"><b class="title">Visual SLAM</b> [<a href="http://wiki.ros.org/vslam">website</a> | <a href="https://www.youtube.com/watch?v=TR8BMZj-Udc">video</a>]</p>
+                <p>Worked on implementation of Visual SLAM (Simultaneous Localization and Mapping) using stereo image data in ROS (Robot Operating System). Developed and refined API, wrote documentation, and implemented new features such as integration of pointcloud matches from laser-based sensors into Visual SLAM.</p>
             </div>
         </div>
 
@@ -82,12 +82,12 @@
         <div class="content">
             <div class="project-right">
                 <img src="images/scope_small.jpg">
-                <p class="title_row"><b class="title">Ping-Pong Playing Robot</b> - Senior Consulting Project for ADSYS - [<a href="https://www.youtube.com/watch?v=sxqWVtp4Vgo">video</a>]</p>
+                <p class="title_row"><b class="title">Ping-Pong Playing Robot</b> &nbsp; Senior Consulting Project for ADSYS [<a href="https://www.youtube.com/watch?v=sxqWVtp4Vgo">video</a>]</p>
                 <p>Technical lead on team of 4 that designed, built, and programmed robot capable of playing ping-pong against human player. This was a technical demo for a high-speed vision system developed by a sponsor company. Was responsible for vision, detection, modeling, and state estimation of the ping-pong ball.</p>
             </div>
             <div class="project-left">
                 <img src="images/medea_small.jpg">
-                <p class="title_row"><b class="title">Autonomous Shore Navigation Using Marine Radar</b> - [<a href="#oceans"oceans>paper</a> | <a href="https://www.youtube.com/watch?v=pTDT7HkfwJM">video</a>]</p>
+                <p class="title_row"><b class="title">Autonomous Shore Navigation Using Marine Radar</b> [<a href="#oceans"oceans>paper</a> | <a href="https://www.youtube.com/watch?v=pTDT7HkfwJM">video</a>]</p>
                 <p>Worked on an autonomoous marine surface vehicle, based on a 12 foot Catamaran. Developed overall software architecture, and worked on integrating position and state data from various sensors, writing motor controllers, and waypoint following, in addition fabricating and testing mechanical and electrical systems on autonomous surface vehicle. Designed a method to autonomously navigate around a shore using marine radar.</p>
             </div>
         </div>
