--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 
         <h1>Publications</h1>
         <div class="content">
-            <p>Helen Oleynikova, Michael Burri, Simon Lynen, Roland Siegwart, "<b>Real-Time Visual-Inertial Localization for Aerial and Ground Robots</b>". To appear in <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.</p>
+            <p>Helen Oleynikova, Michael Burri, Simon Lynen, Roland Siegwart, "<b>Real-Time Visual-Inertial Localization for Aerial and Ground Robots</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
+            [<a href="publications/iros_2015_localization.pdf">pdf</a> | <a href="publications/iros_2015_localization_bibtex.txt">bibtex</a>]
+            </p>
 
-            <p>Michael Burri, Helen Oleynikova, Markus Achtelik, Roland Siegwart, "<b>Real-Time Visual-Inertial Mapping, Re-localization and Planning Onboard MAVs in Previously Unknown Environments</b>".  To appear in <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
-            [<a href="https://www.youtube.com/watch?v=tuUMwcTJx8s">video</a>]
+            <p>Michael Burri, Helen Oleynikova, Markus Achtelik, Roland Siegwart, "<b>Real-Time Visual-Inertial Mapping, Re-localization and Planning Onboard MAVs in Previously Unknown Environments</b>".  In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
+            [<a href="publications/iros_2015_mav.pdf">pdf</a> | <a href="publications/iros_2015_mav_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=tuUMwcTJx8s">video</a>]
             </p>
 
             <a name="reactive"></a>
