--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
 
   <div class="page">
       <h1>Helen Oleynikova</h1>
-    <div class="intro">
-      <div class="portrait">
-        <img src="images/small_portrait.jpg">
-      </div>
-      <div class="intro_text">
-        <p>Hey! I'm Helen. I'm currently a research assistant on the multicopter team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at  <a href="http://www.ethz.ch">ETH Zürich</a>, where I recently finished my Masters in Robotics, Systems, and Control.</p>
-        <p>I did my Bachelor at <a href="http://www.olin.edu">Olin College of Engineering</a> near Boston, where I also studied robotics.</p>
-        <p>I also worked at <a href="http://goo.gl/maps/UWCPy">Google</a> on Street View for 2 years after my Bachelor.</p>
-        <p>[<a href="mailto:helenoleynikova at gmail dot com">helenoleynikova at gmail dot com</a> | <a href="https://github.com/helenol">github</a> | <a href="https://scholar.google.com/citations?user=aeJGZxIAAAAJ">google scholar</a>]</p>
-      </div>
+      <div class="intro">
+        <div class="portrait">
+          <img src="images/portrait_square.jpg">
+        </div>
+        <div class="intro_text">
+          <p>Hey, I'm Helen, and I'm currently a PhD student on the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at  <a href="http://www.ethz.ch">ETH Zürich</a>. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.</p>
+          <p>I finished a Masters in Robotics, Systems, and Control in 2015, also at <a href="http://www.ethz.ch">ETH</a>.</p>
+          <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on autonamatic detection and improvement of imagery.</p>
+          <p>I finished my Bachelor at <a href="http://www.olin.edu">Olin College of Engineering</a> in 2011, also studying Robotics. During this time I also did multiple internships, including at <a href="http://www.willowgarage.com">Willow Garage</a>, where I worked on visual SLAM and low-cost robot arms.</p>
+          <p>[<a href="mailto:helen.oleynikova@mavt.ethz.ch">helen.oleynikova@mavt.ethz.ch</a> | <a href="https://github.com/helenol">github</a> | <a href="https://scholar.google.com/citations?user=aeJGZxIAAAAJ">google scholar</a>]</p>
+        </div>
     </div>
   </div>
+
 
   <div class="page">
     <h1>Publications</h1>
     <div class="content">
+      <h2>Conference</h2>
+      <div class="pub_list">
       <p>Helen Oleynikova, Michael Burri, Simon Lynen, Roland Siegwart, "<b>Real-Time Visual-Inertial Localization for Aerial and Ground Robots</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
         [<a href="publications/iros_2015_localization.pdf">pdf</a> | <a href="publications/iros_2015_localization_bibtex.txt">bibtex</a>]
       </p>
@@ -38,7 +42,7 @@
       </p>
 
       <a name="reactive"></a>
-      <p>Helen Oleynikova, Dominik Honegger, and Marc Pollefeys. “<b>Reactive Avoidance Using Embedded Stereo Vision for MAV Flight</b>”. In <i>Proc. IEEE Int. Conf. on Robotics and Automation (ICRA)</i>, May 2015.<br>
+      <p>Helen Oleynikova, Dominik Honegger, and Marc Pollefeys. “<b>Reactive Avoidance Using Embedded Stereo Vision for MAV Flight</b>”. In <i>IEEE Int. Conf. on Robotics and Automation (ICRA)</i>, May 2015.<br>
         [<a href="publications/icra_2015_reactive_avoidance.pdf">pdf</a> | <a href="publications/icra_2015_bibtex.txt">bibtex</a>]
       </p>
       <a name="fpga"></a>
@@ -47,8 +51,24 @@
         <a name="oceans"></a>
         <p>Elena Oleynikova, Nicole Lee, Andrew J. Barry, Joseph Holler, David Barrett, “<b>Perimeter Patrol On Autonomous Surface Vehicles Using Marine Radar</b>”. In <i>Proceedings of Oceans ’10 IEEE Sydney</i>, May 2010.<br>
           [<a href="publications/oceans_2010_perimeter_patrol.pdf">pdf</a> | <a href="publications/oceans_2010_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=pTDT7HkfwJM">video</a>]</p>
-        </div>
       </div>
+
+      <h2>Workshop</h2>
+      <div class="pub_list">
+      <p>Andrew J. Barry, Helen Oleynikova, Dominik Honegger, Marc Pollefeys, and Russ Tedrake. “<b>FPGA vs. pushbroom stereo vision for MAVs</b>”. In <i>Vision-based Control and Navigation of Small Lightweight UAVs</i>, IROS Workshop, 2015.<br>
+        [<a href="http://abarry.org/Barry15a.pdf">pdf</a>]</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="page">
+    <h1>Videos</h1>
+    <center>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-cm-HkTI8vw" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/tuUMwcTJx8s" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pM9fyV4e6lw" frameborder="0" allowfullscreen></iframe>
+    </center>
+  </div>
 
       <div class="page">
         <h1>Selected Projects</h1>
