Clean up, final version.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p>Hey, I'm Helen, and I'm currently a PhD student on the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at  <a href="http://www.ethz.ch">ETH Zürich</a>. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.</p>
           <p>I finished a Masters in Robotics, Systems, and Control in 2015, also at <a href="http://www.ethz.ch">ETH</a>.</p>
           <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on autonamatic detection and improvement of imagery.</p>
-          <p>I finished my Bachelor at <a href="http://www.olin.edu">Olin College of Engineering</a> in 2011, also studying Robotics. During this time I also did multiple internships, including at <a href="http://www.willowgarage.com">Willow Garage</a>, where I worked on visual SLAM and low-cost robot arms.</p>
+          <p>I finished my Bachelor at <a href="http://www.olin.edu">Olin College of Engineering</a> in 2011, also studying Robotics.</p>
           <p>[<a href="mailto:helen.oleynikova@mavt.ethz.ch">helen.oleynikova@mavt.ethz.ch</a> | <a href="https://github.com/helenol">github</a> | <a href="https://scholar.google.com/citations?user=aeJGZxIAAAAJ">google scholar</a>]</p>
         </div>
     </div>
