Last, give up now.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,italic,700,400,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Helen Oleynikova</title>
 </head>
 <body>
@@ -61,14 +60,14 @@
     </div>
   </div>
 
-  <div class="page">
+  <!-- <div class="page">
     <h1>Videos</h1>
     <center>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-cm-HkTI8vw" frameborder="0" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/tuUMwcTJx8s" frameborder="0" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/pM9fyV4e6lw" frameborder="0" allowfullscreen></iframe>
     </center>
-  </div>
+  </div> -->
 
       <div class="page">
         <h1>Selected Projects</h1>
