Added newest publications.

--- a/index.html
+++ b/index.html
@@ -19,24 +19,28 @@
         <div class="intro_text">
           <p>Hey, I'm Helen, and I'm currently a PhD student on the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at  <a href="http://www.ethz.ch">ETH Zürich</a>. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.</p>
           <p>I finished a Masters in Robotics, Systems, and Control in 2015, also at <a href="http://www.ethz.ch">ETH</a>.</p>
-          <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on autonamatic detection and improvement of imagery.</p>
+          <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on automatic detection of street numbers and learning for improvement of imagery.</p>
           <p>I finished my Bachelor at <a href="http://www.olin.edu">Olin College of Engineering</a> in 2011, also studying Robotics.</p>
           <p>[<a href="mailto:helen.oleynikova@mavt.ethz.ch">helen.oleynikova@mavt.ethz.ch</a> | <a href="https://github.com/helenol">github</a> | <a href="https://scholar.google.com/citations?user=aeJGZxIAAAAJ">google scholar</a>]</p>
         </div>
     </div>
   </div>
 
-
   <div class="page">
     <h1>Publications</h1>
     <div class="content">
       <h2>Conference</h2>
       <div class="pub_list">
-      <p>Helen Oleynikova, Michael Burri, Simon Lynen, Roland Siegwart, "<b>Real-Time Visual-Inertial Localization for Aerial and Ground Robots</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
+      <p>Helen Oleynikova, Michael Burri, Zachary Taylor, Juan Nieto, Roland Siegwart, and Enric Galceran, "<b>Continuous-Time Trajectory Optimization for Online UAV Replanning</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2016.<br>
+        [<a href="publications/iros_2016_replanning.pdf">pdf</a> | <a href="publications/iros_2016_replanning_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=-cm-HkTI8vw">video</a>]
+      </p>
+
+      <a name="localization"></a>
+      <p>Helen Oleynikova, Michael Burri, Simon Lynen, and Roland Siegwart, "<b>Real-Time Visual-Inertial Localization for Aerial and Ground Robots</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
         [<a href="publications/iros_2015_localization.pdf">pdf</a> | <a href="publications/iros_2015_localization_bibtex.txt">bibtex</a>]
       </p>
 
-      <p>Michael Burri, Helen Oleynikova, Markus Achtelik, Roland Siegwart, "<b>Real-Time Visual-Inertial Mapping, Re-localization and Planning Onboard MAVs in Previously Unknown Environments</b>".  In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
+      <p>Michael Burri, Helen Oleynikova, Markus Achtelik, and Roland Siegwart, "<b>Real-Time Visual-Inertial Mapping, Re-localization and Planning Onboard MAVs in Previously Unknown Environments</b>".  In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
         [<a href="publications/iros_2015_mav.pdf">pdf</a> | <a href="publications/iros_2015_mav_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=tuUMwcTJx8s">video</a>]
       </p>
 
@@ -48,14 +52,17 @@
       <p>Dominik Honegger, Helen Oleynikova, and Marc Pollefeys. “<b>Real-time and Low Latency Embedded Computer Vision Hardware Based on a Combination of FPGA and Mobile CPU</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2014.<br>
         [<a href="publications/iros_2014_realtime_lowlatency_hardware.pdf">pdf</a> | <a href="publications/iros_2014_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=pM9fyV4e6lw">video</a>]</p>
         <a name="oceans"></a>
-        <p>Elena Oleynikova, Nicole Lee, Andrew J. Barry, Joseph Holler, David Barrett, “<b>Perimeter Patrol On Autonomous Surface Vehicles Using Marine Radar</b>”. In <i>Proceedings of Oceans ’10 IEEE Sydney</i>, May 2010.<br>
+        <p>Elena Oleynikova, Nicole Lee, Andrew J. Barry, Joseph Holler, David Barrett, “<b>Perimeter Patrol On Autonomous Surface Vehicles Using Marine Radar</b>”. In <i>Proceedings of IEEE Oceans 2010</i>, May 2010.<br>
           [<a href="publications/oceans_2010_perimeter_patrol.pdf">pdf</a> | <a href="publications/oceans_2010_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=pTDT7HkfwJM">video</a>]</p>
       </div>
 
       <h2>Workshop</h2>
       <div class="pub_list">
+      <p>Helen Oleynikova, Alex Millane, Zachary Taylor, Enric Galceran, Juan Nieto, and Roland Siegwart “<b>Signed Distance Fields: A Natural Representation for Both Mapping and Planning</b>”. In <i>Geometry and Beyond</i>, RSS Workshop, 2016.<br>
+        [<a href="publicatons/rss_2016_workshop.pdf">pdf</a> | <a href="publications/rss_2016_workshop_bibtex.txt">bibtex</a>]</p>
+
       <p>Andrew J. Barry, Helen Oleynikova, Dominik Honegger, Marc Pollefeys, and Russ Tedrake. “<b>FPGA vs. pushbroom stereo vision for MAVs</b>”. In <i>Vision-based Control and Navigation of Small Lightweight UAVs</i>, IROS Workshop, 2015.<br>
-        [<a href="http://abarry.org/Barry15a.pdf">pdf</a>]</p>
+        [<a href="publications/iros_2015_workshop.pdf">pdf</a>]</p>
       </div>
     </div>
   </div>
@@ -75,7 +82,7 @@
         <div class="content">
           <div class="project-left">
             <img src="images/heli_pioneer_small.jpg">
-            <p class="title_row"><b class="title">Online Visual-Inertial Based Localization for Robots</b></p>
+            <p class="title_row"><b class="title">Online Visual-Inertial Based Localization for Robots</b> [<a href="publications/iros_2015_localization.pdf">paper 1</a> | <a href="publications/iros_2015_mav.pdf">paper 2</a>]</p>
             <p>I worked on integrating embedded stereo camera and IMU combination and visual-inertial odometry into a sparse mapping framework. The main goal of this work was to enable real-time on-board localization against a sparse map. I then investigated building dense volumetric maps (used for path planning) from keyframes in the sparse map. We showed this working on-board an MAV and ground robot localizing against the same map, allowing the MAV to autonomously land on top of the ground robot given its location from localization.</p>
           </div>
           <div class="project-left">
