--- a/index.html
+++ b/index.html
@@ -29,18 +29,25 @@
   <div class="page">
     <h1>Publications</h1>
     <div class="content">
+      <h2>Preprint</h2>
+      <div class="pub_list">
+
+      <p>Helen Oleynikova, Zachary Taylor, Marius Fehr, Juan Nieto, and Roland Siegwart, “<b>Voxblox: Building 3D Signed Distance Fields for Planning</b>", <i>arXiv preprint arXiv:1611.03631</i>, 2016.<br>
+        [<a href="https://arxiv.org/pdf/1611.03631.pdf">pdf</a> | <a href="publications/arxiv_2016_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=PlqT5zNsvwM">video</a>]
+      </div>
+
       <h2>Conference</h2>
       <div class="pub_list">
-      <p>Helen Oleynikova, Michael Burri, Zachary Taylor, Juan Nieto, Roland Siegwart, and Enric Galceran, "<b>Continuous-Time Trajectory Optimization for Online UAV Replanning</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2016.<br>
+      <p>Helen Oleynikova, Michael Burri, Zachary Taylor, Juan Nieto, Roland Siegwart, and Enric Galceran, “<b>Continuous-Time Trajectory Optimization for Online UAV Replanning</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2016.<br>
         [<a href="publications/iros_2016_replanning.pdf">pdf</a> | <a href="publications/iros_2016_replanning_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=-cm-HkTI8vw">video</a>]
       </p>
 
       <a name="localization"></a>
-      <p>Helen Oleynikova, Michael Burri, Simon Lynen, and Roland Siegwart, "<b>Real-Time Visual-Inertial Localization for Aerial and Ground Robots</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
+      <p>Helen Oleynikova, Michael Burri, Simon Lynen, and Roland Siegwart, “<b>Real-Time Visual-Inertial Localization for Aerial and Ground Robots</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
         [<a href="publications/iros_2015_localization.pdf">pdf</a> | <a href="publications/iros_2015_localization_bibtex.txt">bibtex</a>]
       </p>
 
-      <p>Michael Burri, Helen Oleynikova, Markus Achtelik, and Roland Siegwart, "<b>Real-Time Visual-Inertial Mapping, Re-localization and Planning Onboard MAVs in Previously Unknown Environments</b>".  In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
+      <p>Michael Burri, Helen Oleynikova, Markus Achtelik, and Roland Siegwart, “<b>Real-Time Visual-Inertial Mapping, Re-localization and Planning Onboard MAVs in Previously Unknown Environments</b>".  In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
         [<a href="publications/iros_2015_mav.pdf">pdf</a> | <a href="publications/iros_2015_mav_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=tuUMwcTJx8s">video</a>]
       </p>
 
@@ -63,6 +70,12 @@
 
       <p>Andrew J. Barry, Helen Oleynikova, Dominik Honegger, Marc Pollefeys, and Russ Tedrake. “<b>FPGA vs. pushbroom stereo vision for MAVs</b>”. In <i>Vision-based Control and Navigation of Small Lightweight UAVs</i>, IROS Workshop, 2015.<br>
         [<a href="publications/iros_2015_workshop.pdf">pdf</a>]</p>
+      </div>
+
+      <h2>Journal</h2>
+      <div class="pub_list">
+      <p>Andreas Bircher, Mina Kamel, Kostas Alexis, Helen Oleynikova, and Roland Siegwart “<b>Receding Horizon Path Planning for 3D Exploration and Surface Inspection</b>”. In <i>Autonomous Robots</i>, 2016.<br>
+        [<a href="http://link.springer.com/article/10.1007/s10514-016-9610-0">publisher page</a> | <a href="publications/ar_2016_exploration_bibtex.txt">bibtex</a>]</p>
       </div>
     </div>
   </div>
