--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
       <h2>Preprint</h2>
       <div class="pub_list">
 
-      <p>Helen Oleynikova, Zachary Taylor, Marius Fehr, Juan Nieto, and Roland Siegwart, “<b>Voxblox: Building 3D Signed Distance Fields for Planning</b>", <i>arXiv preprint arXiv:1611.03631</i>, 2016.<br>
+      <p>Helen Oleynikova, Zachary Taylor, Marius Fehr, Juan Nieto, and Roland Siegwart, “<b>Voxblox: Building 3D Signed Distance Fields for Planning</b>”, <i>arXiv preprint arXiv:1611.03631</i>, 2016.<br>
         [<a href="https://arxiv.org/pdf/1611.03631.pdf">pdf</a> | <a href="publications/arxiv_2016_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=PlqT5zNsvwM">video</a>]
       </div>
 
       <h2>Conference</h2>
       <div class="pub_list">
-      <p>Helen Oleynikova, Michael Burri, Zachary Taylor, Juan Nieto, Roland Siegwart, and Enric Galceran, “<b>Continuous-Time Trajectory Optimization for Online UAV Replanning</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2016.<br>
+      <p>Helen Oleynikova, Michael Burri, Zachary Taylor, Juan Nieto, Roland Siegwart, and Enric Galceran, “<b>Continuous-Time Trajectory Optimization for Online UAV Replanning</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2016.<br>
         [<a href="publications/iros_2016_replanning.pdf">pdf</a> | <a href="publications/iros_2016_replanning_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=-cm-HkTI8vw">video</a>]
       </p>
 
       <a name="localization"></a>
-      <p>Helen Oleynikova, Michael Burri, Simon Lynen, and Roland Siegwart, “<b>Real-Time Visual-Inertial Localization for Aerial and Ground Robots</b>". In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
+      <p>Helen Oleynikova, Michael Burri, Simon Lynen, and Roland Siegwart, “<b>Real-Time Visual-Inertial Localization for Aerial and Ground Robots</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
         [<a href="publications/iros_2015_localization.pdf">pdf</a> | <a href="publications/iros_2015_localization_bibtex.txt">bibtex</a>]
       </p>
 
-      <p>Michael Burri, Helen Oleynikova, Markus Achtelik, and Roland Siegwart, “<b>Real-Time Visual-Inertial Mapping, Re-localization and Planning Onboard MAVs in Previously Unknown Environments</b>".  In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
+      <p>Michael Burri, Helen Oleynikova, Markus Achtelik, and Roland Siegwart, “<b>Real-Time Visual-Inertial Mapping, Re-localization and Planning Onboard MAVs in Previously Unknown Environments</b>”.  In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, September 2015.<br>
         [<a href="publications/iros_2015_mav.pdf">pdf</a> | <a href="publications/iros_2015_mav_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=tuUMwcTJx8s">video</a>]
       </p>
 
