--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
     <div class="content">
       <h2>Conference</h2>
       <div class="pub_list">
-      <p>Helen Oleynikova, Zachary Taylor, Marius Fehr, Juan Nieto, and Roland Siegwart, “<b>Voxblox: Building 3D Signed Distance Fields for Planning</b>”, <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, 2017.<br>
+      <p>Helen Oleynikova, Zachary Taylor, Roland Siegwart, and Juan Nieto, “<b>Safe Local Exploration for Replanning in Cluttered Unknown Environments for Micro-Aerial Vehicles</b>”. <i>arXiv preprint arXiv:1710.00604</i>, 2017.<br>
+        [<a href="https://arxiv.org/pdf/1710.00604">pdf</a> | <a href="publications/arxiv_2017_exploration_bibtex.txt">bibtex</a> | <a href="https://arxiv.org/abs/1710.00604">arxiv</a> ]
+      </p>
+
+      <p>Helen Oleynikova, Zachary Taylor, Marius Fehr, Roland Siegwart, and Juan Nieto, “<b>Voxblox: Incremental 3D Euclidean Signed Distance Fields for On-Board MAV Planning</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2017.<br>
         [<a href="publications/iros_2017_voxblox.pdf">pdf</a> | <a href="publications/iros_2017_voxblox_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=ZGvnGFnTVR8">video</a> | <a href="https://arxiv.org/abs/1611.03631">arxiv</a> ]
+      </p>
 
       <p>Helen Oleynikova, Michael Burri, Zachary Taylor, Juan Nieto, Roland Siegwart, and Enric Galceran, “<b>Continuous-Time Trajectory Optimization for Online UAV Replanning</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2016.<br>
         [<a href="publications/iros_2016_replanning.pdf">pdf</a> | <a href="publications/iros_2016_replanning_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=-cm-HkTI8vw">video</a>]
