Add latest papers, shuffle around order a bit.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,20 @@
   <div class="page">
     <h1>Publications</h1>
     <div class="content">
+      <h2>Journal</h2>
+      <div class="pub_list">
+      <p>Helen Oleynikova, Zachary Taylor, Roland Siegwart, and Juan Nieto, “<b>Safe Local Exploration for Replanning in Cluttered Unknown Environments for Micro-Aerial Vehicles</b>”. <i>IEEE Robotics and Automation Letters</i>, 2018.<br>
+        [<a href="publications/ral_2018_local_exploration.pdf">pdf</a> | <a href="publications/ral_2018_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=rAJwD2kr7c0">video</a> | <a href="https://arxiv.org/abs/1710.00604">arxiv</a> ]
+      </p>
+
+      <p>Andreas Bircher, Mina Kamel, Kostas Alexis, Helen Oleynikova, and Roland Siegwart “<b>Receding Horizon Path Planning for 3D Exploration and Surface Inspection</b>”. In <i>Autonomous Robots</i>, 2016.<br>
+        [<a href="http://link.springer.com/article/10.1007/s10514-016-9610-0">publisher page</a> | <a href="publications/ar_2016_exploration_bibtex.txt">bibtex</a>]</p>
+      </div>
+
       <h2>Conference</h2>
       <div class="pub_list">
-      <p>Helen Oleynikova, Zachary Taylor, Roland Siegwart, and Juan Nieto, “<b>Safe Local Exploration for Replanning in Cluttered Unknown Environments for Micro-Aerial Vehicles</b>”. <i>arXiv preprint arXiv:1710.00604</i>, 2017.<br>
-        [<a href="https://arxiv.org/pdf/1710.00604">pdf</a> | <a href="publications/arxiv_2017_exploration_bibtex.txt">bibtex</a> | <a href="https://arxiv.org/abs/1710.00604">arxiv</a> ]
+      <p>Helen Oleynikova, Zachary Taylor, Roland Siegwart, and Juan Nieto, “<b>Sparse 3D Topological Graphs for Micro-Aerial Vehicle Planning</b>”. <i>arXiv preprint arXiv:1803.04345</i>, 2018.<br>
+        [<a href="https://arxiv.org/pdf/1803.04345.pdf">pdf</a> | <a href="publications/arxiv_2018_topology_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=U_6rk-SF0Nw">video</a> | <a href="https://arxiv.org/abs/1803.04345">arxiv</a> ]
       </p>
 
       <p>Helen Oleynikova, Zachary Taylor, Marius Fehr, Roland Siegwart, and Juan Nieto, “<b>Voxblox: Incremental 3D Euclidean Signed Distance Fields for On-Board MAV Planning</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2017.<br>
@@ -77,11 +87,7 @@
         [<a href="publications/iros_2015_workshop.pdf">pdf</a>]</p>
       </div>
 
-      <h2>Journal</h2>
-      <div class="pub_list">
-      <p>Andreas Bircher, Mina Kamel, Kostas Alexis, Helen Oleynikova, and Roland Siegwart “<b>Receding Horizon Path Planning for 3D Exploration and Surface Inspection</b>”. In <i>Autonomous Robots</i>, 2016.<br>
-        [<a href="http://link.springer.com/article/10.1007/s10514-016-9610-0">publisher page</a> | <a href="publications/ar_2016_exploration_bibtex.txt">bibtex</a>]</p>
-      </div>
+
     </div>
   </div>
 
