Add at least pre-print.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img src="images/portrait_square.jpg">
         </div>
         <div class="intro_text">
-          <p>Hey, I'm Helen, and I'm currently a PhD student on the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a>. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.</p>
+          <p>Hey, I'm Helen, and I have finished a PhD with the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a> in February. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.</p>
           <p>I finished a Masters in Robotics, Systems, and Control in 2015, also at <a href="http://www.ethz.ch">ETH</a>.</p>
           <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on automatic detection of street numbers and learning for improvement of imagery.</p>
           <p>I finished my Bachelor at <a href="http://www.olin.edu">Olin College of Engineering</a> in 2011, also studying Robotics.</p>
@@ -35,6 +35,14 @@
 
       <p>Andreas Bircher, Mina Kamel, Kostas Alexis, Helen Oleynikova, and Roland Siegwart “<b>Receding Horizon Path Planning for 3D Exploration and Surface Inspection</b>”. In <i>Autonomous Robots</i>, 2016.<br>
         [<a href="http://link.springer.com/article/10.1007/s10514-016-9610-0">publisher page</a> | <a href="publications/ar_2016_exploration_bibtex.txt">bibtex</a>]</p>
+      </div>
+
+      <h2>Preprint</h2>
+      <div class="pub_list">
+
+      <p>Helen Oleynikova, Zachary Taylor, Alexander Millane, Roland Siegwart, and Juan Nieto, “<b>A Complete System for Vision-Based Micro-Aerial Vehicle Mapping, Planning, and Flight in Cluttered Environments</b>”. <i>arXiv preprint arXiv:1812.03892</i>, 2018.<br>
+        [<a href="https://arxiv.org/pdf/1812.03892.pdf">pdf</a> | <a href="publications/arxiv_2018_complete_bibtex.txt">bibtex</a> | <a href="https://arxiv.org/abs/1812.03892">arxiv</a>]
+      </p>
       </div>
 
       <h2>Conference</h2>
