--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <p>I finished a Masters in Robotics, Systems, and Control in 2015, also at <a href="http://www.ethz.ch">ETH</a>.</p>
           <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on automatic detection of street numbers and learning for improvement of imagery.</p>
           <p>I finished my Bachelor at <a href="http://www.olin.edu">Olin College of Engineering</a> in 2011, also studying Robotics.</p>
-          <p>[<a href="mailto:helen.oleynikova@mavt.ethz.ch">helen.oleynikova@mavt.ethz.ch</a> | <a href="https://github.com/helenol">github</a> | <a href="https://scholar.google.com/citations?user=aeJGZxIAAAAJ">google scholar</a>]</p>
+          <p>[<a href="mailto:helen.oleynikova@gmail.com">helen.oleynikova@gmail.com</a> | <a href="https://github.com/helenol">github</a> | <a href="https://scholar.google.com/citations?user=aeJGZxIAAAAJ">google scholar</a>]</p>
         </div>
     </div>
   </div>
@@ -27,6 +27,16 @@
   <div class="page">
     <h1>Publications</h1>
     <div class="content">
+      <h2>Thesis/h2>
+      <div class="pub_list">
+      <p>Helen Oleynikova, “<b>Mapping and Planning for Safe Collision Avoidance On-board Micro-Aerial Vehicles</b>”. <i>Doctoral Thesis, ETH Zurich</i>, 2019.<br>
+        [<a href="publications/thesis_2019_oleynikova.pdf">pdf</a> || <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> ]
+      </p>
+
+      <p>Andreas Bircher, Mina Kamel, Kostas Alexis, Helen Oleynikova, and Roland Siegwart “<b>Receding Horizon Path Planning for 3D Exploration and Surface Inspection</b>”. In <i>Autonomous Robots</i>, 2016.<br>
+        [<a href="http://link.springer.com/article/10.1007/s10514-016-9610-0">publisher page</a> | <a href="publications/ar_2016_exploration_bibtex.txt">bibtex</a>]</p>
+      </div>
+      
       <h2>Journal</h2>
       <div class="pub_list">
       <p>Helen Oleynikova, Zachary Taylor, Roland Siegwart, and Juan Nieto, “<b>Safe Local Exploration for Replanning in Cluttered Unknown Environments for Micro-Aerial Vehicles</b>”. <i>IEEE Robotics and Automation Letters</i>, 2018.<br>
