--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="page">
     <h1>Publications</h1>
     <div class="content">
-      <h2>Thesis/h2>
+      <h2>Thesis</h2>
       <div class="pub_list">
       <p>Helen Oleynikova, “<b>Mapping and Planning for Safe Collision Avoidance On-board Micro-Aerial Vehicles</b>”. <i>Doctoral Thesis, ETH Zurich</i>, 2019.<br>
         [<a href="publications/thesis_2019_oleynikova.pdf">pdf</a> || <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> ]
