--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>Helen Oleynikova, “<b>Mapping and Planning for Safe Collision Avoidance On-board Micro-Aerial Vehicles</b>”. <i>Doctoral Thesis, ETH Zurich</i>, 2019.<br>
         [<a href="publications/thesis_2019_oleynikova.pdf">pdf</a> || <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> ]
       </p>
-        
+      </div>
        
       <h2>Journal</h2>
       <div class="pub_list">
