--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           <img src="images/portrait_square.jpg">
         </div>
         <div class="intro_text">
-          <p>Hey, I'm Helen, and I'm currently working at the <a href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft Mixed Reality and AI Lab</a> in Zürich, Switzerland.
-           I have finished a PhD with the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a> in February 2019. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.</p>
-          <p>I finished a Masters in Robotics, Systems, and Control in 2015, also at <a href="http://www.ethz.ch">ETH</a>.</p>
+          <p>Hey, I'm Helen, and I'm currently working at the <a href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft Mixed Reality and AI Lab</a> in Zürich, Switzerland.</p>
+          <p>I have finished a PhD with the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a> in February 2019. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.
+          I finished a Masters in Robotics, Systems, and Control in 2015, also at <a href="http://www.ethz.ch">ETH</a>.</p>
           <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on automatic detection of street numbers and learning for improvement of imagery.</p>
           <p>I finished my Bachelor at <a href="http://www.olin.edu">Olin College of Engineering</a> in 2011, also studying Robotics.</p>
           <p>[<a href="mailto:helen.oleynikova@gmail.com">helen.oleynikova@gmail.com</a> | <a href="https://github.com/helenol">github</a> | <a href="https://scholar.google.com/citations?user=aeJGZxIAAAAJ">google scholar</a>]</p>
