--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       <h1>Helen Oleynikova</h1>
       <div class="intro">
         <div class="portrait">
-          <img src="images/portrait_square.jpg">
+          <img src="images/lake_small.jpg">
+          <p><small>Photo courtesy of <a href="https://marco-tranzatto.github.io/">Marco Tranzatto</a>.</small></p>
         </div>
         <div class="intro_text">
-          <p>Hey, I'm Helen, and I'm currently working at the <a href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft Mixed Reality and AI Lab</a> in Zürich, Switzerland.</p>
-          <p>I have finished a PhD with the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a> in February 2019. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.
+          <p>Hey, I'm Helen, and I'm currently a Senior Scientist at the <a href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft Mixed Reality and AI Lab</a> in Zürich, Switzerland, working on the combination of Mixed Reality and robotics.</p>
+          <p>I finished a PhD with the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a> in February 2019 with Prof. Roland Siegwart. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.
           I finished a Masters in Robotics, Systems, and Control in 2015, also at <a href="http://www.ethz.ch">ETH</a>.</p>
           <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on automatic detection of street numbers and learning for improvement of imagery.</p>
           <p>I finished my Bachelor at <a href="http://www.olin.edu">Olin College of Engineering</a> in 2011, also studying Robotics.</p>
@@ -31,36 +32,45 @@
       <h2>Thesis</h2>
       <div class="pub_list">
       <p>Helen Oleynikova, “<b>Mapping and Planning for Safe Collision Avoidance On-board Micro-Aerial Vehicles</b>”. <i>Doctoral Thesis, ETH Zurich</i>, 2019.<br>
-        [<a href="publications/thesis_2019_oleynikova.pdf">pdf</a> || <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> ]
+        [<a href="publications/thesis_2019_oleynikova.pdf">pdf</a> || <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a>]
       </p>
       </div>
-       
+
       <h2>Journal</h2>
       <div class="pub_list">
+      <p>Helen Oleynikova, Zachary Taylor, Alexander Millane, Roland Siegwart, and Juan Nieto, “<b>An Open‐Source System for Vision‐Based Micro‐Aerial Vehicle Mapping, Planning, and Flight in Cluttered Environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
+        [<a href="publications/jfr_2020_system.pdf">pdf</a> | <a href="publications/jfr_2020_system_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> | <a href="https://arxiv.org/abs/1812.03892">arxiv</a> | <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21950">publisher link</a>]
+      </p>
+
+      <p>Victor Reijgwart, Alexander Millane, Helen Oleynikova, Roland Siegwart, Cesar Cadena, Juan Nieto, “<b>Voxgraph: Globally Consistent, Volumetric Mapping
+using Signed Distance Function Submaps</b>”. In <i>IEEE Robotics and Automation Letters</i>, 2019.<br>
+        [<a href="publications/ral_2019_voxgraph.pdf">pdf</a> | <a href="publications/ral_2019_voxgraph_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=N9p1_Fkxxro">video</a> | <a href="https://arxiv.org/abs/2004.13154">arxiv</a>]
+      </p>
+
       <p>Helen Oleynikova, Zachary Taylor, Roland Siegwart, and Juan Nieto, “<b>Safe Local Exploration for Replanning in Cluttered Unknown Environments for Micro-Aerial Vehicles</b>”. <i>IEEE Robotics and Automation Letters</i>, 2018.<br>
-        [<a href="publications/ral_2018_local_exploration.pdf">pdf</a> | <a href="publications/ral_2018_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=rAJwD2kr7c0">video</a> | <a href="https://arxiv.org/abs/1710.00604">arxiv</a> ]
+        [<a href="publications/ral_2018_local_exploration.pdf">pdf</a> | <a href="publications/ral_2018_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=rAJwD2kr7c0">video</a> | <a href="https://arxiv.org/abs/1710.00604">arxiv</a>]
       </p>
 
       <p>Andreas Bircher, Mina Kamel, Kostas Alexis, Helen Oleynikova, and Roland Siegwart “<b>Receding Horizon Path Planning for 3D Exploration and Surface Inspection</b>”. In <i>Autonomous Robots</i>, 2016.<br>
         [<a href="http://link.springer.com/article/10.1007/s10514-016-9610-0">publisher page</a> | <a href="publications/ar_2016_exploration_bibtex.txt">bibtex</a>]</p>
       </div>
 
-      <h2>Preprint</h2>
-      <div class="pub_list">
 
-      <p>Helen Oleynikova, Zachary Taylor, Alexander Millane, Roland Siegwart, and Juan Nieto, “<b>A Complete System for Vision-Based Micro-Aerial Vehicle Mapping, Planning, and Flight in Cluttered Environments</b>”. <i>arXiv preprint arXiv:1812.03892</i>, 2018.<br>
-        [<a href="https://arxiv.org/pdf/1812.03892.pdf">pdf</a> | <a href="publications/arxiv_2018_complete_bibtex.txt">bibtex</a> | <a href="https://arxiv.org/abs/1812.03892">arxiv</a>]
-      </p>
-      </div>
 
       <h2>Conference</h2>
       <div class="pub_list">
+      <p>Alexander Millane, Helen Oleynikova, Juan Nieto, Roland Siegwart, Cesar Cadena. “<b>Free-Space Features: Global Localization in 2D Laser SLAM Using
+Distance Function Maps</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, November 2019.<br>
+        [<a href="publications/iros_2019_freespace.pdf">pdf</a> | <a href="publications/iros_2019_freespace_bibtex.txt">bibtex</a> | <a href="https://arxiv.org/abs/1908.01863">arxiv</a>]
+      </p>
+
+
       <p>Helen Oleynikova, Zachary Taylor, Roland Siegwart, and Juan Nieto, “<b>Sparse 3D Topological Graphs for Micro-Aerial Vehicle Planning</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2018.<br>
-        [<a href="publications/iros_2018_skeleton.pdf">pdf</a> | <a href="publications/iros_2018_skeleton_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=U_6rk-SF0Nw">video</a> | <a href="https://arxiv.org/abs/1803.04345">arxiv</a> ]
+        [<a href="publications/iros_2018_skeleton.pdf">pdf</a> | <a href="publications/iros_2018_skeleton_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=U_6rk-SF0Nw">video</a> | <a href="https://arxiv.org/abs/1803.04345">arxiv</a>]
       </p>
 
       <p>Helen Oleynikova, Zachary Taylor, Marius Fehr, Roland Siegwart, and Juan Nieto, “<b>Voxblox: Incremental 3D Euclidean Signed Distance Fields for On-Board MAV Planning</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2017.<br>
-        [<a href="publications/iros_2017_voxblox.pdf">pdf</a> | <a href="publications/iros_2017_voxblox_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=ZGvnGFnTVR8">video</a> | <a href="https://arxiv.org/abs/1611.03631">arxiv</a> ]
+        [<a href="publications/iros_2017_voxblox.pdf">pdf</a> | <a href="publications/iros_2017_voxblox_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=ZGvnGFnTVR8">video</a> | <a href="https://arxiv.org/abs/1611.03631">arxiv</a>]
       </p>
 
       <p>Helen Oleynikova, Michael Burri, Zachary Taylor, Juan Nieto, Roland Siegwart, and Enric Galceran, “<b>Continuous-Time Trajectory Optimization for Online UAV Replanning</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2016.<br>
