--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2>Thesis</h2>
       <div class="pub_list">
       <p>Helen Oleynikova, “<b>Mapping and Planning for Safe Collision Avoidance On-board Micro-Aerial Vehicles</b>”. <i>Doctoral Thesis, ETH Zurich</i>, 2019.<br>
-        [<a href="publications/thesis_2019_oleynikova.pdf">pdf</a> || <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a>]
+        [<a href="publications/thesis_2019_oleynikova.pdf">pdf</a> | <a href="https://www.research-collection.ethz.ch/handle/20.500.11850/335330">ETH research collection</a> | <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a>]
       </p>
       </div>
 
